; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_ble_hci_trans_cfg_hs.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_ble_hci_trans_cfg_hs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ble_hci_rx_cmd_hs_cb = common dso_local global i32* null, align 8
@ble_hci_rx_cmd_hs_arg = common dso_local global i8* null, align 8
@ble_hci_rx_acl_hs_cb = common dso_local global i32* null, align 8
@ble_hci_rx_acl_hs_arg = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ble_hci_trans_cfg_hs(i32* %0, i8* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** %5, align 8
  store i32* %9, i32** @ble_hci_rx_cmd_hs_cb, align 8
  %10 = load i8*, i8** %6, align 8
  store i8* %10, i8** @ble_hci_rx_cmd_hs_arg, align 8
  %11 = load i32*, i32** %7, align 8
  store i32* %11, i32** @ble_hci_rx_acl_hs_cb, align 8
  %12 = load i8*, i8** %8, align 8
  store i8* %12, i8** @ble_hci_rx_acl_hs_arg, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
